Minor spacing fixes on the landing page

--- a/web/assets/css/pages/_landingPage.scss
+++ b/web/assets/css/pages/_landingPage.scss
@@ -44,6 +44,7 @@
                     bottom: 15px;
                     top: 15px;
                 }
+                padding-left: 10px;
 
                 li {
                     border-bottom: $Border-Default;
@@ -74,7 +75,7 @@
             @include element('matches') {
                 @include desktop-container;
 
-                margin: 15px 0;
+                margin-top: 15px;
 
                 @include element('match'){
                     @include desktop-container;
@@ -111,6 +112,11 @@
                                 @extend %margin-center;
 
                                 display: block;
+
+                                @include respond-to(phones) {
+                                    height: 55px;
+                                    width: 55px;
+                                }
                             }
                         }
                     }
